compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@iter_loop_empty_var.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n        let collection = [1, 2, 3];\n        for pattern in collection { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "collection",
                    location: <internal>:13:23,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:26:27,
                    kind: StaticCall(
                        StaticCall {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                    Type {
                                        name: Identifier {
                                            name: "Array",
                                            location: <internal>:0:0,
                                        },
                                        type_arguments: [],
                                        location: <internal>:0:0,
                                    },
                                ],
                                name: Callable {
                                    name: Identifier {
                                        name: "new",
                                        location: <internal>:0:0,
                                    },
                                    type_arguments: [],
                                    location: <internal>:0:0,
                                },
                                location: <internal>:0:0,
                            },
                            arguments: [
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    location: <internal>:27:28,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            location: <internal>:27:28,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    location: <internal>:30:31,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            location: <internal>:30:31,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    value: 2,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            4,
                                        ),
                                    },
                                    location: <internal>:33:34,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    4,
                                                ),
                                            },
                                            location: <internal>:33:34,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            4,
                                                        ),
                                                    },
                                                    value: 3,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:9:36,
    },
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                5,
            ),
        },
        kind: IteratorLoop(
            IteratorLoop {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        5,
                    ),
                },
                collection: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            6,
                        ),
                    },
                    location: <internal>:60:70,
                    kind: Variable(
                        Variable {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    6,
                                ),
                            },
                            reference: StatementId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            name: Identifier {
                                name: "collection",
                                location: <internal>:60:70,
                            },
                            location: <internal>:60:70,
                        },
                    ),
                },
                block: Block {
                    statements: [],
                    location: <internal>:71:74,
                },
                location: <internal>:45:74,
            },
        ),
        location: <internal>:45:74,
    },
]
