compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@pred_loop_break.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "while true { break; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: PredicateLoop(
            PredicateLoop {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                condition: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:6:10,
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:6:10,
                            kind: Boolean(
                                BooleanLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    value: true,
                                },
                            ),
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    2,
                                ),
                            },
                            kind: Break(
                                Break {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:13:19,
                        },
                    ],
                    location: <internal>:11:21,
                },
                location: <internal>:0:21,
            },
        ),
        location: <internal>:0:21,
    },
]
