compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@pred_loop_continue.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "while true { continue; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: PredicateLoop(
            PredicateLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                condition: Expression {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                0,
                            ),
                        },
                        index: Idx(
                            1,
                        ),
                    },
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Boolean(
                                BooleanLiteral {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    value: true,
                                },
                            ),
                            location: <internal>:6:10,
                        },
                    ),
                    location: <internal>:6:10,
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    2,
                                ),
                            },
                            kind: Continue(
                                Continue {
                                    id: StatementId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    location: <internal>:13:22,
                                },
                            ),
                            location: <internal>:13:22,
                        },
                    ],
                    location: <internal>:11:24,
                },
                location: <internal>:0:24,
            },
        ),
        location: <internal>:0:24,
    },
]
