compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@pred_loop_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "while true { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Expression(
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: If(
                                        If {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            cases: [
                                                Condition {
                                                    condition: Some(
                                                        Expression {
                                                            id: ExpressionId {
                                                                def: ItemId {
                                                                    package: PackageId(
                                                                        0,
                                                                    ),
                                                                    index: Idx(
                                                                        0,
                                                                    ),
                                                                },
                                                                index: Idx(
                                                                    3,
                                                                ),
                                                            },
                                                            kind: Literal(
                                                                Literal {
                                                                    id: ExpressionId {
                                                                        def: ItemId {
                                                                            package: PackageId(
                                                                                0,
                                                                            ),
                                                                            index: Idx(
                                                                                0,
                                                                            ),
                                                                        },
                                                                        index: Idx(
                                                                            3,
                                                                        ),
                                                                    },
                                                                    kind: Boolean(
                                                                        BooleanLiteral {
                                                                            id: ExpressionId {
                                                                                def: ItemId {
                                                                                    package: PackageId(
                                                                                        0,
                                                                                    ),
                                                                                    index: Idx(
                                                                                        0,
                                                                                    ),
                                                                                },
                                                                                index: Idx(
                                                                                    3,
                                                                                ),
                                                                            },
                                                                            value: true,
                                                                        },
                                                                    ),
                                                                    location: <internal>:6:10,
                                                                },
                                                            ),
                                                            location: <internal>:6:10,
                                                        },
                                                    ),
                                                    block: Block {
                                                        statements: [],
                                                        location: <internal>:11:14,
                                                    },
                                                    location: <internal>:0:0,
                                                },
                                                Condition {
                                                    condition: None,
                                                    block: Block {
                                                        statements: [
                                                            Statement {
                                                                id: StatementId {
                                                                    def: ItemId {
                                                                        package: PackageId(
                                                                            0,
                                                                        ),
                                                                        index: Idx(
                                                                            0,
                                                                        ),
                                                                    },
                                                                    index: Idx(
                                                                        4,
                                                                    ),
                                                                },
                                                                kind: Break(
                                                                    Break {
                                                                        id: StatementId {
                                                                            def: ItemId {
                                                                                package: PackageId(
                                                                                    0,
                                                                                ),
                                                                                index: Idx(
                                                                                    0,
                                                                                ),
                                                                            },
                                                                            index: Idx(
                                                                                4,
                                                                            ),
                                                                        },
                                                                        location: <internal>:0:0,
                                                                    },
                                                                ),
                                                                location: <internal>:0:0,
                                                            },
                                                        ],
                                                        location: <internal>:0:0,
                                                    },
                                                    location: <internal>:0:0,
                                                },
                                            ],
                                            location: <internal>:0:0,
                                        },
                                    ),
                                    location: <internal>:0:0,
                                },
                            ),
                            location: <internal>:0:0,
                        },
                    ],
                    location: <internal>:0:0,
                },
                location: <internal>:0:14,
            },
        ),
        location: <internal>:0:14,
    },
]
